4.增加基本CRUD功能

--- a/src/main/resources/international/login_zh_CN.properties
+++ b/src/main/resources/international/login_zh_CN.properties
@@ -3,3 +3,4 @@ login_remeber=\u8BF7\u8BB0\u4F4F\u6211
 login_sign=\u767B\u9646
 login_top=\u8BF7\u767B\u9646
 login_username=\u7528\u6237\u540D
+login_top2=\u8BF7\u6CE8\u518C
